<resources>
    <string name="app_name">Campuspedia</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_logout">Log out</string>
    <string name="error_invalid_email">This email address is invalid!</string>
    <string name="error_invalid_password">This password is too short (min: 6 char)</string>
    <string name="error_field_required">This field is required</string>
    <string name="text_home">Home</string>
    <string name="text_category">Category</string>
    <string name="text_suggest">Suggest</string>
    <string name="text_notification">Notification</string>
    <string name="text_profile">Profile</string>
    <string name="text_campus">Campus</string>
    <string name="backdrop_title">Good Morning</string>
    <string name="backdrop_subtitle">Welcome to mobile legend</string>
    <string name="gmaps_api_key">AIzaSyDvX2w43_r-mo02vpbSMbKCsfeSemvhZok</string>
</resources>
