<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/text_home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_category"
        android:enabled="true"
        android:icon="@drawable/ic_category"
        android:title="@string/text_category"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_suggest"
        android:enabled="true"
        android:icon="@drawable/ic_suggest"
        android:title="@string/text_suggest"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_notification"
        android:enabled="true"
        android:icon="@drawable/ic_notification"
        android:title="@string/text_category"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_music"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/text_profile"
        app:showAsAction="ifRoom" />
</menu>